syntax = "proto3"; //声明了protobuf的版本

package fixbug; //声明了代码所在的包（对于C++来说是namespace）

//定义下面的选项，表示生成service服务类和rpc方法描述，默认不生成
option cc_generic_services = true;

//错误类型
message ResultCode {
  int32 errcode = 1;
  bytes errmsg = 2;
}
//定义登录请求消息类型 name pwd
message LoginRequest {
  bytes name = 1;
  bytes pwd = 2;
}

//定义登录响应消息类型
message LoginResponse {
  ResultCode Result = 1;
  bool success = 2;
}

//列表
message GetFriendListRequest { uint32 userid = 1; }

message User {
  bytes name = 1;
  uint32 age = 2;
  enum Sex {
    MAN = 0;
    WOMAN = 1;
  }
  Sex sex = 3;
}
message GetFriendListResponse {
  ResultCode Result = 1;
  repeated User FrinedList = 2; //定义了一个列表类型
}

//在protobuf里面怎么定义描述rpc方法的类型 - service
service UserServiceRpc {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetFriendList(GetFriendListRequest) returns (GetFriendListResponse);
}